--- a/react-typescript/estoque_materiais/src/index.css
+++ b/react-typescript/estoque_materiais/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 * {
 	margin: 0;
@@ -8,15 +8,13 @@
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;	
-	font-size: 12px;
+	font-family: "roboto";
 	color: #005481;
 
-	
-
-	background-color: #F0F0F0;
-
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 }
+
+
+
 
